// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsonSchemaRenderer component A Heading widget 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  font-weight: normal;
}

.c6 {
  margin: 0;
  font-size: 34px;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <h2
      className="c5 c6"
    >
      Something Important
    </h2>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A HighlightedName widget 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  padding: 8px;
  font-size: 14px;
  color: #2A506F;
  background-color: #222;
}

.c6 {
  display: inline-block;
  border-radius: 2px;
  line-height: 1;
}

.c7 {
  color: white;
  background-color: #222;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <span
      className="c5 c6 c7"
    >
      Jellyfish
    </span>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A Link widget 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  opacity: 1;
  display: inline-block;
}

.c5:active,
.c5:hover {
  color: hsl(196.29999999999995,100%,37.5%);
}

.c6 {
  color: #00AEEF;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <a
      className="c5 c6"
      color="primary.main"
      href="https://trello.com/b/lEIoUMKY"
      rel="noopener"
      target="_blank"
    >
      View trello board
    </a>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A List widget 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

.c5 {
  padding: 0;
  margin: 0;
  list-style: none;
  counter-reset: ordered-list-counter;
}

.c5 > li {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 > li:first-child {
  margin-top: 0;
}

.c5 > li:last-child {
  margin-bottom: 0;
}

.c5 > li:before {
  text-align: center;
}

.c5 > li {
  margin: 16px 0;
  counter-increment: ordered-list-counter;
}

.c5 > li:before {
  content: counter(ordered-list-counter);
  margin-right: 8px;
  background: #1496E1;
  height: 1.5em;
  width: 1.5em;
  min-width: 1.5em;
  line-height: 1.5em;
  color: white;
  border-radius: 50%;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <ol
      className="sc-pJUVA c5 "
    >
      <li>
        <div
          className="c2 c3 c4 "
        >
          <div
            className=""
          >
            item 1
          </div>
        </div>
      </li>
      <li>
        <div
          className="c2 c3 c4 "
        >
          <div
            className=""
          >
            item 2
          </div>
        </div>
      </li>
      <li>
        <div
          className="c2 c3 c4 "
        >
          <div
            className=""
          >
            item 3
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A Markdown widget 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  font-size: inherit;
  word-wrap: break-word;
}

.c5 .hljs {
  display: block;
  overflow-x: auto;
  padding: 0.5em;
  background: #f0f0f0;
}

.c5 .hljs,
.c5 .hljs-subst {
  color: #444;
}

.c5 .hljs-comment {
  color: #888888;
}

.c5 .hljs-keyword,
.c5 .hljs-attribute,
.c5 .hljs-selector-tag,
.c5 .hljs-meta-keyword,
.c5 .hljs-doctag,
.c5 .hljs-name {
  font-weight: bold;
}

.c5 .hljs-type,
.c5 .hljs-string,
.c5 .hljs-number,
.c5 .hljs-selector-id,
.c5 .hljs-selector-class,
.c5 .hljs-quote,
.c5 .hljs-template-tag,
.c5 .hljs-deletion {
  color: #880000;
}

.c5 .hljs-title,
.c5 .hljs-section {
  color: #880000;
  font-weight: bold;
}

.c5 .hljs-regexp,
.c5 .hljs-symbol,
.c5 .hljs-variable,
.c5 .hljs-template-variable,
.c5 .hljs-link,
.c5 .hljs-selector-attr,
.c5 .hljs-selector-pseudo {
  color: #bc6060;
}

.c5 .hljs-literal {
  color: #78a960;
}

.c5 .hljs-built_in,
.c5 .hljs-bullet,
.c5 .hljs-code,
.c5 .hljs-addition {
  color: #397300;
}

.c5 .hljs-meta {
  color: #1f7199;
}

.c5 .hljs-meta-string {
  color: #4d99bf;
}

.c5 .hljs-emphasis {
  font-style: italic;
}

.c5 .hljs-strong {
  font-weight: bold;
}

.c5 .pl-c {
  color: #6a737d;
}

.c5 .pl-c1,
.c5 .pl-s .pl-v {
  color: #005cc5;
}

.c5 .pl-e,
.c5 .pl-en {
  color: #6f42c1;
}

.c5 .pl-smi,
.c5 .pl-s .pl-s1 {
  color: #24292e;
}

.c5 .pl-ent {
  color: #22863a;
}

.c5 .pl-k {
  color: #d73a49;
}

.c5 .pl-s,
.c5 .pl-pds,
.c5 .pl-s .pl-pse .pl-s1,
.c5 .pl-sr,
.c5 .pl-sr .pl-cce,
.c5 .pl-sr .pl-sre,
.c5 .pl-sr .pl-sra {
  color: #032f62;
}

.c5 .pl-v,
.c5 .pl-smw {
  color: #e36209;
}

.c5 .pl-bu {
  color: #b31d28;
}

.c5 .pl-ii {
  color: #fafbfc;
  background-color: #b31d28;
}

.c5 .pl-c2 {
  color: #fafbfc;
  background-color: #d73a49;
}

.c5 .pl-c2::before {
  content: '^M';
}

.c5 .pl-sr .pl-cce {
  font-weight: bold;
  color: #22863a;
}

.c5 .pl-ml {
  color: #735c0f;
}

.c5 .pl-mh,
.c5 .pl-mh .pl-en,
.c5 .pl-ms {
  font-weight: bold;
  color: #005cc5;
}

.c5 .pl-mi {
  font-style: italic;
  color: #24292e;
}

.c5 .pl-mb {
  font-weight: bold;
  color: #24292e;
}

.c5 .pl-md {
  color: #b31d28;
  background-color: #ffeef0;
}

.c5 .pl-mi1 {
  color: #22863a;
  background-color: #f0fff4;
}

.c5 .pl-mc {
  color: #e36209;
  background-color: #ffebda;
}

.c5 .pl-mi2 {
  color: #f6f8fa;
  background-color: #005cc5;
}

.c5 .pl-mdr {
  font-weight: bold;
  color: #6f42c1;
}

.c5 .pl-ba {
  color: #586069;
}

.c5 .pl-sg {
  color: #959da5;
}

.c5 .pl-corl {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #032f62;
}

.c5 .octicon {
  display: inline-block;
  vertical-align: text-top;
  fill: currentColor;
}

.c5 a {
  background-color: transparent;
  -webkit-text-decoration-skip: objects;
}

.c5 a:active,
.c5 a:hover {
  outline-width: 0;
}

.c5 strong {
  font-weight: inherit;
}

.c5 strong {
  font-weight: bolder;
}

.c5 h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

.c5 img {
  border-style: none;
}

.c5 svg:not(:root) {
  overflow: hidden;
}

.c5 code,
.c5 kbd,
.c5 pre {
  font-family: 'Ubuntu Mono','Courier New',monospace;
  font-size: 1em;
}

.c5 hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

.c5 input {
  font: inherit;
  margin: 0;
}

.c5 input {
  overflow: visible;
}

.c5 [type='checkbox'] {
  box-sizing: border-box;
  padding: 0;
}

.c5 * {
  box-sizing: border-box;
}

.c5 input {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
}

.c5 a {
  color: #0366d6;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5 strong {
  font-weight: 600;
}

.c5 hr {
  height: 0;
  margin: 15px 0;
  overflow: hidden;
  background: transparent;
  border: 0;
  border-bottom: 1px solid #dfe2e5;
}

.c5 hr::before {
  display: table;
  content: '';
}

.c5 hr::after {
  display: table;
  clear: both;
  content: '';
}

.c5 table {
  border-spacing: 0;
  border-collapse: collapse;
}

.c5 td,
.c5 th {
  padding: 0;
}

.c5 h1,
.c5 h2,
.c5 h3,
.c5 h4,
.c5 h5,
.c5 h6 {
  margin-top: 0;
  margin-bottom: 0;
}

.c5 h1 {
  font-size: 32px;
  font-weight: 400;
}

.c5 h2 {
  font-size: 24px;
  font-weight: 400;
}

.c5 h3 {
  font-size: 20px;
  font-weight: 400;
}

.c5 h4 {
  font-size: 16px;
  font-weight: 400;
}

.c5 h5 {
  font-size: 14px;
  font-weight: 400;
}

.c5 h6 {
  font-size: 12px;
  font-weight: 400;
}

.c5 p {
  margin-top: 0;
  margin-bottom: 10px;
}

.c5 blockquote {
  margin: 0;
}

.c5 ul,
.c5 ol {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c5 ol ol,
.c5 ul ol {
  list-style-type: lower-roman;
}

.c5 ul ul ol,
.c5 ul ol ol,
.c5 ol ul ol,
.c5 ol ol ol {
  list-style-type: lower-alpha;
}

.c5 dd {
  margin-left: 0;
}

.c5 code {
  font-size: 1rem;
  line-height: 1.2;
}

.c5 pre {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 1em;
}

.c5 .octicon {
  vertical-align: text-bottom;
}

.c5 .pl-0 {
  padding-left: 0 !important;
}

.c5 .pl-1 {
  padding-left: 4px !important;
}

.c5 .pl-2 {
  padding-left: 8px !important;
}

.c5 .pl-3 {
  padding-left: 16px !important;
}

.c5 .pl-4 {
  padding-left: 24px !important;
}

.c5 .pl-5 {
  padding-left: 32px !important;
}

.c5 .pl-6 {
  padding-left: 40px !important;
}

.c5 .markdown-body::before {
  display: table;
  content: '';
}

.c5 .markdown-body::after {
  display: table;
  clear: both;
  content: '';
}

.c5 > *:first-child {
  margin-top: 0 !important;
}

.c5 > *:last-child {
  margin-bottom: 0 !important;
}

.c5 a:not([href]) {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 .anchor {
  float: left;
  padding-right: 4px;
  margin-left: -20px;
  line-height: 1;
}

.c5 .anchor:focus {
  outline: none;
}

.c5 p,
.c5 blockquote,
.c5 ul,
.c5 ol,
.c5 dl,
.c5 table,
.c5 pre {
  margin-top: 0;
  margin-bottom: 16px;
}

.c5 hr {
  height: 0.25em;
  padding: 0;
  margin: 24px 0;
  background-color: #e1e4e8;
  border: 0;
}

.c5 blockquote {
  padding: 0 1em;
  color: #6a737d;
  border-left: 0.25em solid #dfe2e5;
}

.c5 blockquote > :first-child {
  margin-top: 0;
}

.c5 blockquote > :last-child {
  margin-bottom: 0;
}

.c5 kbd {
  display: inline-block;
  padding: 3px 5px;
  font-size: 11px;
  line-height: 10px;
  color: #444d56;
  vertical-align: middle;
  background-color: #fafbfc;
  border: solid 1px #c6cbd1;
  border-bottom-color: #959da5;
  border-radius: 3px;
  box-shadow: inset 0 -1px 0 #959da5;
}

.c5 h1,
.c5 h2,
.c5 h3,
.c5 h4,
.c5 h5,
.c5 h6 {
  margin-top: 24px;
  margin-bottom: 16px;
  font-weight: 600;
  line-height: 1.25;
}

.c5 h1 .octicon-link,
.c5 h2 .octicon-link,
.c5 h3 .octicon-link,
.c5 h4 .octicon-link,
.c5 h5 .octicon-link,
.c5 h6 .octicon-link {
  color: #1b1f23;
  vertical-align: middle;
  visibility: hidden;
}

.c5 h1:hover .anchor,
.c5 h2:hover .anchor,
.c5 h3:hover .anchor,
.c5 h4:hover .anchor,
.c5 h5:hover .anchor,
.c5 h6:hover .anchor {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5 h1:hover .anchor .octicon-link,
.c5 h2:hover .anchor .octicon-link,
.c5 h3:hover .anchor .octicon-link,
.c5 h4:hover .anchor .octicon-link,
.c5 h5:hover .anchor .octicon-link,
.c5 h6:hover .anchor .octicon-link {
  visibility: visible;
}

.c5 h1 {
  padding-bottom: 0.3em;
  font-size: 2em;
  border-bottom: 1px solid #eaecef;
}

.c5 h2 {
  padding-bottom: 0.3em;
  font-size: 1.5em;
  border-bottom: 1px solid #eaecef;
}

.c5 h3 {
  font-size: 1.25em;
}

.c5 h4 {
  font-size: 1em;
}

.c5 h5 {
  font-size: 0.875em;
}

.c5 h6 {
  font-size: 0.85em;
  color: #6a737d;
}

.c5 ul,
.c5 ol {
  padding-left: 2em;
}

.c5 ul ul,
.c5 ul ol,
.c5 ol ol,
.c5 ol ul {
  margin-top: 0;
  margin-bottom: 0;
}

.c5 li > p {
  margin-top: 16px;
}

.c5 li + li {
  margin-top: 0.25em;
}

.c5 dl {
  padding: 0;
}

.c5 dl dt {
  padding: 0;
  margin-top: 16px;
  font-size: 1em;
  font-style: italic;
  font-weight: 600;
}

.c5 dl dd {
  padding: 0 16px;
  margin-bottom: 16px;
}

.c5 table {
  display: block;
  width: 100%;
  overflow: auto;
}

.c5 table th {
  font-weight: 600;
}

.c5 table th,
.c5 table td {
  padding: 6px 13px;
  border: 1px solid #dfe2e5;
}

.c5 table tr {
  background-color: #fff;
  border-top: 1px solid #c6cbd1;
}

.c5 table tr:nth-child(2n) {
  background-color: #f6f8fa;
}

.c5 img {
  max-width: 100%;
  box-sizing: content-box;
  background-color: #fff;
}

.c5 code {
  padding: 0;
  padding-top: 0.2em;
  padding-bottom: 0.2em;
  margin: 0;
  background-color: rgba(27,31,35,0.05);
  border-radius: 3px;
}

.c5 code::before,
.c5 code::after {
  -webkit-letter-spacing: -0.2em;
  -moz-letter-spacing: -0.2em;
  -ms-letter-spacing: -0.2em;
  letter-spacing: -0.2em;
  content: '\\00a0';
}

.c5 pre {
  word-wrap: normal;
}

.c5 pre > code {
  padding: 0;
  margin: 0;
  font-size: 100%;
  word-break: normal;
  white-space: pre;
  background: transparent;
  border: 0;
}

.c5 .highlight {
  margin-bottom: 16px;
}

.c5 .highlight pre {
  margin-bottom: 0;
  word-break: normal;
}

.c5 .highlight pre,
.c5 pre {
  padding: 16px;
  overflow: auto;
  font-size: 95%;
  line-height: 1.45;
  background-color: #f6f8fa;
  border-radius: 3px;
}

.c5 pre code {
  display: inline;
  max-width: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  line-height: inherit;
  word-wrap: normal;
  background-color: transparent;
  border: 0;
}

.c5 pre code::before,
.c5 pre code::after {
  content: normal;
}

.c5 .full-commit .btn-outline:not(:disabled):hover {
  color: #005cc5;
  border-color: #005cc5;
}

.c5 kbd {
  display: inline-block;
  padding: 3px 5px;
  font-size: 11px;
  line-height: 10px;
  color: #444d56;
  vertical-align: middle;
  background-color: #fafbfc;
  border: solid 1px #d1d5da;
  border-bottom-color: #c6cbd1;
  border-radius: 3px;
  box-shadow: inset 0 -1px 0 #c6cbd1;
}

.c5:checked + .radio-label {
  position: relative;
  z-index: 1;
  border-color: #0366d6;
}

.c5 .task-list-item {
  list-style-type: none;
}

.c5 .task-list-item + .task-list-item {
  margin-top: 3px;
}

.c5 .task-list-item input {
  margin: 0 0.2em 0.25em -1.6em;
  vertical-align: middle;
}

.c5 hr {
  border-bottom-color: #eee;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c5"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<h1>Something Important</h1>
<h2>Something less important</h2>
",
        }
      }
    />
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A Tag widget 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c6 {
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  white-space: pre;
}

.c10 {
  font-weight: 600;
}

.c9 {
  font-size: 12px;
  color: #1496E1;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #e8f5fc;
  border: 1px solid #1496E1;
  border-radius: 2px;
  line-height: 1.5;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5 "
    >
      <div
        className="c2 c6 c7"
      >
        <div
          className="c8 c9"
        >
          subscription: 
        </div>
        <div
          className="c10 c9"
        >
          premium
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A badge widget 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 12px;
  padding-right: 12px;
  font-size: 12px;
  color: #0650E5;
  background-color: #D7E4FE;
}

.c6 {
  display: inline-block;
  border-radius: 1em;
  line-height: 1;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <span
      className="c5 c6 "
    >
      closed
    </span>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A boolean 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px #00AEEF;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 20px;
  width: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
}

.c14 {
  box-sizing: border-box;
  stroke-width: 2px;
  stroke: #00AEEF;
  width: 20px;
  height: 20px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.c9:hover input:not([disabled]) + div,
.c9:hover input:not([disabled]) + span {
  border-color: #DDE1f0;
}

.c12 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c12:checked + span > span {
  left: calc( 40px - 20px );
  background: #00AEEF;
}

.c11 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c5 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  font-weight: 600;
}

.c7 {
  font-size: 85%;
  color: #527699;
}

.c8 > label > div > div,
.c8 > label > div > span {
  background-color: white;
}

.c8 > label > span {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
}

.c8 label input + div {
  border-color: #00AEEF;
  background: #00AEEF;
}

.c8 label input + div > svg {
  stroke: #fff;
}

.c8 label[disabled] {
  opacity: 0.4;
}

.c8 label:hover input:not([disabled]) + span > span {
  border-color: #009dd7;
  background: #009dd7;
}

.c8 label:hover input:not([disabled]) + div {
  border-color: #527699!important;
}

.c8 label:hover input:not([disabled]) + div {
  border-color: #009dd7 !important;
  background: #009dd7;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

@media only screen and (max-width:768px) {
  .c10 {
    margin-right: 6px;
  }
}

@media only screen and (max-width:768px) {
  .c13 {
    border: solid 1px #00AEEF;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5"
    >
      <div
        className="c6 "
      >
        Field title
      </div>
      <div
        className="c7"
      >
        Field description
      </div>
    </div>
    <div
      className="c8 "
    >
      <label
        checked={true}
        className="c9"
        onClick={[Function]}
      >
        <div
          checked={true}
          className="c10 c11"
        >
          <input
            checked={true}
            className="c12"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <div
            checked={true}
            className="c13 "
          >
            <svg
              checked={true}
              className="c14"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          The label
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A button group widget 1`] = `
.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 1px solid #00AEEF;
  border-radius: 20px;
  color: #444444;
  padding: 4px 30px;
  font-size: 14px;
  line-height: 1.5;
  background-color: #00AEEF;
  color: #444444;
  border-radius: 20px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  box-shadow: 0px 0px 0px 2px #00AEEF;
}

.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c7 {
  font-weight: 600;
  font-size: 14px;
  height: 38px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 svg {
  color: inherit !important;
  font-size: 0.925em;
}

.c7:disabled {
  cursor: not-allowed;
}

.c7 {
  color: white;
}

.c7:hover:enabled,
.c7:focus:enabled,
.c7:active:enabled {
  box-shadow: none;
  background: hsl(196.29999999999995,100%,37.5%);
  border-color: hsl(196.29999999999995,100%,37.5%);
  color: white;
  opacity: initial;
}

.c7:hover:enabled svg,
.c7:focus:enabled svg,
.c7:active:enabled svg {
  color: white !important;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 > *:first-child {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c5 > *:last-child {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c5 > *:not(:last-child) {
  border-right: 0;
}

.c5 > *:not(:last-child):not(:first-child) {
  border-radius: 0;
}

.c5 > *:hover {
  z-index: 1;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5"
    >
      <button
        className="c6 sc-AxheI c7 "
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        item 1
      </button>
      <button
        className="c6 sc-AxheI c7 "
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        item 2
      </button>
      <button
        className="c6 sc-AxheI c7 "
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        item 3
      </button>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A button widget 1`] = `
.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 1px solid #00AEEF;
  border-radius: 20px;
  color: #444444;
  padding: 4px 30px;
  font-size: 14px;
  line-height: 1.5;
  background-color: #00AEEF;
  color: #444444;
  border-radius: 20px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #00AEEF;
}

.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c6 {
  font-weight: 600;
  font-size: 14px;
  height: 38px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  color: inherit !important;
  font-size: 0.925em;
}

.c6:disabled {
  cursor: not-allowed;
}

.c6 {
  color: white;
}

.c6:hover:enabled,
.c6:focus:enabled,
.c6:active:enabled {
  box-shadow: none;
  background: hsl(196.29999999999995,100%,37.5%);
  border-color: hsl(196.29999999999995,100%,37.5%);
  color: white;
  opacity: initial;
}

.c6:hover:enabled svg,
.c6:focus:enabled svg,
.c6:active:enabled svg {
  color: white !important;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <a
      className="c5 sc-AxheI c6 "
      disabled={false}
      href="http://jel.ly.fish/issue"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      target="_blank"
    >
      issue
    </a>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A drop-down button widget 1`] = `
.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 1px solid #00AEEF;
  border-radius: 20px;
  color: #444444;
  padding: 4px 30px;
  font-size: 14px;
  line-height: 1.5;
  background-color: #00AEEF;
  color: #444444;
  border-radius: 20px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  box-shadow: 0px 0px 0px 2px #00AEEF;
}

.c9 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 1px solid #00AEEF;
  border-radius: 20px;
  color: #444444;
  padding: 4px 30px;
  font-size: 14px;
  line-height: 1.5;
  background-color: #00AEEF;
  color: #444444;
  border-radius: 20px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  line-height: 0;
  padding: 12px;
}

.c9:hover {
  box-shadow: 0px 0px 0px 2px #00AEEF;
}

.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c7 {
  font-weight: 600;
  font-size: 14px;
  height: 38px;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 svg {
  color: inherit !important;
  font-size: 0.925em;
}

.c7:disabled {
  cursor: not-allowed;
}

.c7 {
  color: white;
}

.c7:hover:enabled,
.c7:focus:enabled,
.c7:active:enabled {
  box-shadow: none;
  background: hsl(196.29999999999995,100%,37.5%);
  border-color: hsl(196.29999999999995,100%,37.5%);
  color: white;
  opacity: initial;
}

.c7:hover:enabled svg,
.c7:focus:enabled svg,
.c7:active:enabled svg {
  color: white !important;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c10 {
  min-width: 0;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-left: 0;
  margin: 0;
  vertical-align: top;
  padding: 0 16px;
  width: 44px;
}

.c8 {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-right: 0;
  margin: 0;
  width: calc(100% - 44px);
}

.c5 {
  display: inline-block;
  border-radius: 3px;
  vertical-align: top;
  position: relative;
}

.c5 svg {
  width: 12px;
  -webkit-transform: translateY(1px);
  -ms-transform: translateY(1px);
  transform: translateY(1px);
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5 "
      disabled={false}
    >
      <span>
        <button
          className="c6 sc-AxheI c7 c8"
          disabled={false}
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          Actions
        </button>
        <button
          className="c9 sc-AxheI c7 c10"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-chevron-down fa-w-14 "
            color="#444444"
            data-icon="chevron-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A hidden field 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c3 c4 "
    >
      <div
        className=""
      >
        This should be shown
      </div>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A hidden title 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className=""
    >
      No title shown
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A null object 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
/>
`;

exports[`JsonSchemaRenderer component A number 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c5 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  font-weight: 600;
}

.c7 {
  font-size: 85%;
  color: #527699;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5"
    >
      <div
        className="c6 "
      >
        Field title
      </div>
      <div
        className="c7"
      >
        Field description
      </div>
    </div>
    <div
      className=""
    >
      4.5
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A string 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c5 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  font-weight: 600;
}

.c8 {
  text-align: left;
  white-space: normal;
}

.c7 {
  font-size: 85%;
  color: #527699;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5"
    >
      <div
        className="c6 "
      >
        Field title
      </div>
      <div
        className="c7"
      >
        Field description
      </div>
    </div>
    <div
      className="c8 "
    >
      A string value
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A string-interpolated value 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c5 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  font-weight: 600;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5"
    >
      <div
        className="c6 "
      >
        Mentions
      </div>
    </div>
    <div
      className=""
    >
      4 mentions
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A truncated array of strings field 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c3 c4 "
    >
      <div
        className=""
      >
        item 1
      </div>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <div
        className=""
      >
        item 2
      </div>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <div
        className=""
      >
        item 3
      </div>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <div
        className=""
      >
        item 4
      </div>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <div
        className=""
      >
        + 2 more
      </div>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component A truncated string 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

.c5 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c5"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut facilisis urna. Suspendisse ullamcorper, velit ut auctor vulputate, nibh sem finibus ipsum, vel bibendum tellus nulla non nunc. In porta velit odio. Vivamus nibh dolor, bibendum vel velit sit amet, suscipit lobortis leo. Donec tempus justo non nisi pulvinar, vitae fringilla ligula aliquam. Proin efficitur tellus ac tincidunt iaculis. Duis mattis urna quis libero feugiat, nec pretium felis ornare.
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component An Img widget 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

.c5 {
  display: block;
  max-width: 100%;
  height: auto;
  width: 200px;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <img
      alt="Jellyfish"
      className="c5"
      src="https://upload.wikimedia.org/wikipedia/commons/4/44/Jelly_cc11.jpg"
      width={200}
    />
  </div>
</div>
`;

exports[`JsonSchemaRenderer component An array of strings field 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 12px;
  padding-right: 12px;
  font-size: 12px;
  color: #007171;
  background-color: #C7FFFF;
}

.c6 {
  display: inline-block;
  border-radius: 1em;
  line-height: 1;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c3 c4 "
    >
      <span
        className="c5 c6 "
      >
        item 1
      </span>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <span
        className="c5 c6 "
      >
        item 2
      </span>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <span
        className="c5 c6 "
      >
        item 3
      </span>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component An evaluated value 1`] = `
.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px #00AEEF;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 20px;
  width: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
}

.c13 {
  box-sizing: border-box;
  stroke-width: 2px;
  stroke: #00AEEF;
  width: 20px;
  height: 20px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.c8:hover input:not([disabled]) + div,
.c8:hover input:not([disabled]) + span {
  border-color: #DDE1f0;
}

.c11 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c11:checked + span > span {
  left: calc( 40px - 20px );
  background: #00AEEF;
}

.c10 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c5 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  font-weight: 600;
}

.c7 > label > div > div,
.c7 > label > div > span {
  background-color: white;
}

.c7 > label > span {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
}

.c7 label input + div {
  border-color: #00AEEF;
  background: #00AEEF;
}

.c7 label input + div > svg {
  stroke: #fff;
}

.c7 label[disabled] {
  opacity: 0.4;
}

.c7 label:hover input:not([disabled]) + span > span {
  border-color: #009dd7;
  background: #009dd7;
}

.c7 label:hover input:not([disabled]) + div {
  border-color: #527699!important;
}

.c7 label:hover input:not([disabled]) + div {
  border-color: #009dd7 !important;
  background: #009dd7;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

@media only screen and (max-width:768px) {
  .c12 {
    border: solid 1px #00AEEF;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5"
    >
      <div
        className="c6 "
      >
        Multiple owners?
      </div>
    </div>
    <div
      className="c7 "
    >
      <label
        checked={true}
        className="c8"
        onClick={[Function]}
      >
        <div
          checked={true}
          className="c9 c10"
        >
          <input
            checked={true}
            className="c11"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="checkbox"
          />
          <div
            checked={true}
            className="c12 "
          >
            <svg
              checked={true}
              className="c13"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component An integer 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c5 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  font-weight: 600;
}

.c7 {
  font-size: 85%;
  color: #527699;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5"
    >
      <div
        className="c6 "
      >
        Field title
      </div>
      <div
        className="c7"
      >
        Field description
      </div>
    </div>
    <div
      className=""
    >
      5000
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component An invalid value 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c9 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  font-weight: 600;
}

.c11 {
  font-size: 85%;
  color: #527699;
}

.c7 {
  margin-bottom: auto;
  margin-right: 8px;
  color: #FF423D;
}

.c8 {
  color: #eb0800;
}

.c6 {
  margin-top: 8px;
  margin-bottom: 8px;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5 c6"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="c7"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-ban fa-w-16 "
          data-icon="ban"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.034 8 8 119.033 8 256s111.034 248 248 248 248-111.034 248-248S392.967 8 256 8zm130.108 117.892c65.448 65.448 70 165.481 20.677 235.637L150.47 105.216c70.204-49.356 170.226-44.735 235.638 20.676zM125.892 386.108c-65.448-65.448-70-165.481-20.677-235.637L361.53 406.784c-70.203 49.356-170.226 44.736-235.638-20.676z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
      <span
        className="c8"
      >
        Invalid data/schema
      </span>
    </div>
    <div
      className="c2 c9"
    >
      <div
        className="c10 "
      >
        Field title
      </div>
      <div
        className="c11"
      >
        Field description
      </div>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <div
        className=""
      >
        what
      </div>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component An object with various properties 1`] = `
.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 1px #DDE1f0;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 20px;
  width: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.c9:hover input:not([disabled]) + div,
.c9:hover input:not([disabled]) + span {
  border-color: #DDE1f0;
}

.c12 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c12:checked + span > span {
  left: calc( 40px - 20px );
  background: #00AEEF;
}

.c11 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c5 {
  margin-right: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c6 {
  font-weight: 600;
}

.c7 {
  font-size: 85%;
  color: #527699;
}

.c8 > label > div > div,
.c8 > label > div > span {
  background-color: white;
}

.c8 > label > span {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
}

.c8 label[disabled] {
  opacity: 0.4;
}

.c8 label:hover input:not([disabled]) + span > span {
  border-color: #009dd7;
  background: #009dd7;
}

.c8 label:hover input:not([disabled]) + div {
  border-color: #527699!important;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

@media only screen and (max-width:768px) {
  .c13 {
    border: solid 1px #DDE1f0;
  }
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c5"
    >
      <div
        className="c6 "
      >
        Field title
      </div>
      <div
        className="c7"
      >
        Field description
      </div>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <div
        className="c2 c5"
      >
        <div
          className="c6 "
        >
          A String Field
        </div>
      </div>
      <div
        className=""
      >
        The string value
      </div>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <div
        className="c2 c5"
      >
        <div
          className="c6 "
        >
          A Number Field
        </div>
      </div>
      <div
        className=""
      >
        12.345
      </div>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <div
        className="c2 c5"
      >
        <div
          className="c6 "
        >
          An Integer Field
        </div>
      </div>
      <div
        className=""
      >
        5000
      </div>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <div
        className="c2 c5"
      >
        <div
          className="c6 "
        >
          A Boolean Field
        </div>
      </div>
      <div
        className="c8 "
      >
        <label
          checked={false}
          className="c9"
          onClick={[Function]}
        >
          <div
            checked={false}
            className="c10 c11"
          >
            <input
              checked={false}
              className="c12"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="checkbox"
            />
            <div
              checked={false}
              className="c13 "
            />
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`JsonSchemaRenderer component Re-ordered fields 1`] = `
.c0 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  line-height: 1.5;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  box-sizing: border-box;
}

.c3 {
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  font-family: 'Source Sans Pro',Arial,sans-serif;
  font-size: 14px;
  color: #2A506F;
}

<div
  className="c0 c1"
>
  <div
    className="c2 c3 c4 "
  >
    <div
      className="c2 c3 c4 "
    >
      <div
        className=""
      >
        field B value
      </div>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <div
        className=""
      >
        field C value
      </div>
    </div>
    <div
      className="c2 c3 c4 "
    >
      <div
        className=""
      >
        field A value
      </div>
    </div>
  </div>
</div>
`;
